# ProyectoDB_cepas

./: README.md  ad  docker-compose.yml  package-lock.json  package.json  pyproject.toml  requirements.txt
app/: __init__.py  crud.py  dtos.py  repositories.py
backend/: .env  .gitignore  README.md  alembic.ini  dockerfile  entrypoint.sh  pyproject.toml  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 001cb025f461_make_visible_columns_non_nullable_with_.py  1857fb618633_se_agrega_un_jsob_a_user_para_guardar_.py  1e6317f2eb52_convert_hidden_columns_to_text.py  2b8ce73432e1_las_ids_de_user_ya_no_se_autoincrementan.py  6ba2fc716fb8_make_hidden_columns_int_to_strings.py  71650923806b_create_all_tables.py  81b82bd2aa65_crear_tablas_iniciales.py  83b61e278acc_se_crea_tabla_de_users.py  903455aace9b_delete_columns_visibel_col_de_user.py  c9cb216e75dc_se_cambia_el_jsonb_de_user_por_una_lista.py
backend/app/: __init__.py  config.py  const.py  crud.py  db.py  dtos.py  main.py  models.py  repositories.py  security.py
backend/data/: AÑADIR GRAFICO TORTA PARA CONTAR ATRIBUT.txt  cepas_16_4_25.csv
backend/scripts/: client.py
backend/temp/: clear_db.py  load_data.py
frontend/: .dockerignore  .env.development  .env.production  dockerfile  index.html  package-lock.json  package.json  readme.md  static.json  vite.config.ts
frontend/public/: index.html
frontend/src/: App.tsx  index.css  main.tsx  vite-env.d.ts
frontend/src/components/: CepasColumns.tsx  CepasTable.tsx  DropdownMenu.tsx  ExampleTable.tsx  PieChart.tsx  (+5 more)
temp/: load_data.py  query.txt
(+18 files in other folders)
